--- a/index.html
+++ b/index.html
@@ -312,6 +312,31 @@
         and want more control.
       </p>
     </div>
+    
+<div id="products" class="section">
+  <h2>Our plugins</h2>
+  <p class="sub" style="margin-bottom:14px;">
+    AP Systems Lab builds small, focused WordPress tools. These are the first two.
+  </p>
+
+  <div class="grid-3">
+    <div class="feat">
+      <h3>AP Internal Linking Helper</h3>
+      <p>Editor sidebar that suggests internal links while you write posts and pages.</p>
+      <p style="margin-top:10px;">
+        <a class="btn btn-primary" href="link-helper.html">View product page</a>
+      </p>
+    </div>
+
+    <div class="feat">
+      <h3>AP Link Audit</h3>
+      <p>Site-wide orphan + underlinked content audit with a priority fix list.</p>
+      <p style="margin-top:10px;">
+        <a class="btn btn-ghost" href="link-audit.html">View product page</a>
+      </p>
+    </div>
+  </div>
+</div>
 
     <div class="footer">
       <div>© <span id="year"></span> AP Systems Lab</div>
